--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   json_annotation: ^4.8.1
   json_serializable: ^6.7.1
   postgres: ^3.0.4
+  shelf_cors_headers: ^0.1.5
 
 
 dev_dependencies:
